--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1084,6 +1084,26 @@
                 android:resource="@string/supersu_dashboard_summary" />
         </activity>
 
+        <activity android:name="Settings$SuperUserActivity"
+            android:label="@string/superuser_title"
+            android:icon="@drawable/ic_settings_superuser"
+            android:taskAffinity="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="0">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.system" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.SuperUser" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/superuser_summary" />
+        </activity>
+
         <activity android:name="Settings$DeviceInfoSettingsActivity"
                 android:theme="@style/Theme.SubSettingsDialogWhenLarge"
                 android:label="@string/device_info_settings"
