--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -143,7 +143,7 @@
 
         <activity android:name=".Settings$WirelessSettings"
             android:label="@string/header_category_wireless_networks">
-            <intent-filter android:priority="5">
+            <intent-filter android:priority="6">
                 <action android:name="com.android.settings.category.wireless" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -151,7 +151,7 @@
 
         <activity android:name=".Settings$ResurrectionSettings"
             android:label="@string/rr_category_title">
-            <intent-filter android:priority="4">
+            <intent-filter android:priority="5">
                 <action android:name="com.android.settings.category.rr" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -174,6 +174,14 @@
                 android:value="com.android.settings.Themes" />
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/themes_summary" />
+        </activity>
+
+        <activity android:name=".Settings$CustomSettings"
+            android:label="@string/header_category_custom">
+            <intent-filter android:priority="4">
+                <action android:name="com.android.settings.category.custom" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".Settings$DeviceSettings"
