--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -228,6 +228,12 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name="com.android.settings.rr.utils.OnBoot">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <!-- Wireless Controls -->
 
         <activity android:name="Settings$WirelessSettingsActivity"
